tests/type-error/classes/MethodSignature.vix
type Maybe a
  = Nothing
  | Just a

class Pointed f where
  point : forall a. a -> f a

instance Pointed Maybe where
  point : Int
  point = Just
